Fix double border when menu is collapsed

--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -15,6 +15,7 @@
 
     .main-menu {
         display: none;
+        border-top: 5px solid #303030;
 
         li {
             position: relative;
