--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -235,7 +235,6 @@ header {
         margin: 0 auto;
         width: 100%;
         height: 60px;
-        border-bottom: 5px solid #303030;
         font-size: 20px;
         line-height: 60px;
         text-align: center;
